# noising

./: .gitignore  clone-all.sh  install.sh  pull-logs.sh  run.sh  uv-tool.hs  view-logs.sh  wandb.sh
noising/: .gitignore  ada.py  analyze.py  experiment-dry.sh  experiment.py  experiment.sh  install.sh  noise.py  phi3-mini-mmlu-no-sandbag.sh  phi3-mini-mmlu-sandbag.sh  phi3-mini-mmlu.sh  phi4-mini.sh  pyproject.toml  r.sh  ro.py  small-test.sh
noising/evals/: gsm8k.py  mmlu-not-sandbag-alt.py  mmlu-not-sandbag.py  mmlu-sandbag.py  mmlu.py  simpleqa.py
