[project]
name = "circuit-breaker-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "datasets",
    "kitcat>=2.0.2",
    "matplotlib>=3.11.0",
    "polars>=1.42.1",
    "torch",
    "torchvision",
    "transformers",
    "vllm==0.20",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
